--- a/index.html
+++ b/index.html
@@ -113,19 +113,45 @@
         <div class="testimonials-col">
             <img src="eduford_img/user1.jpg">
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab earum quibusdam exercitationem! Possimus nisi reiciendis unde. Blanditiis autem quaerat quos dicta voluptate non voluptas cupiditate facere fugit, molestias quasi voluptates?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Ab earum quibusdam exercitationem! Possimus nisi reiciendis unde. 
+                    Blanditiis autem quaerat quos dicta voluptate non voluptas cupiditate facere fugit, 
+                    molestias quasi voluptates?</p>
                 <h3>Christine Berkley</h3>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+
+               
             </div>
         </div>
         <div class="testimonials-col">
-            <img src="eduford_img/user1.jpg">
+            <img src="eduford_img/user2.jpg">
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab earum quibusdam exercitationem! Possimus nisi reiciendis unde. Blanditiis autem quaerat quos dicta voluptate non voluptas cupiditate facere fugit, molestias quasi voluptates?</p>
-                <h3>Christine Berkley</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Ab earum quibusdam exercitationem! Possimus nisi reiciendis unde. 
+                    Blanditiis autem quaerat quos dicta voluptate non voluptas cupiditate facere fugit, 
+                    molestias quasi voluptates?</p>
+                <h3>David Byer</h3>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-half-o"></i>
+                
             </div>
         </div>
     </div>
 </section>
+
+<!-- ---- Call to action---- -->
+
+<section>class="cta"
+<h1>Enroll for our various online courses, anywhere fro the world</h1>
+</section>
+
 <!--------JavaScript for Toggle Menu------->
 <script>
     var navLinks = document.getElementById("navLinks");
