--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>University Website Design</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +16,7 @@
         <nav>
             <a href="index.html"><img src="eduford_img/logo.png"> </a>
             <div class="nav-links" id="navLinks">
-               <i class="fa fa-times" onclick="hidemenu()"></i>
+               <i class="fa fa-times" id="hide_button" onclick="hideMenu()"></i>
                 <ul>
                     <li><a href="">HOME</a> </li>
                     <li><a href="">ABOUT</a> </li>
@@ -25,12 +25,12 @@
                     <li><a href="">CONTACT</a> </li>
                 </ul>
             </div>
-            <i class="fa fa-bars" onclick="showMenu()"></i>
+            <i class="fa fa-bars" id="show_button" onclick="showMenu()"></i>
         </nav>
 
 <div class="text-box">
            <h1> World's Bigggest University</h1> 
-           <p>Making website is now one of the easiest thing in the world. You need to learn HTML, CSS, <br> Javascript and you are good to go.</p>
+           <p>This one of the best University in this area. It is known as top private University in Delhi NCR.</p>
         <a href=""class="hero-btn">Visit us to know more</a>
     </div>
     </section>
