--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <div class="text-box">
            <h1> World's Bigggest University</h1> 
-           <p>This one of the best University in this area. It is known as top private University in this area.</p>
+           <p>This one of the best University in this area, it's known as top private University of this area.</p>
         <a href=""class="hero-btn">Visit us to know more</a>
     </div>
     </section>
