--- a/index.html
+++ b/index.html
@@ -204,17 +204,7 @@
 
 </section>
 
-<!--------JavaScript for Toggle Menu------->
-<script>
-    var navLinks = document.getElementById("navLinks");
+<script src="script.js"></script>
 
-    function showMenu(){
-        navLinks.style.right = "0";
-    }
-    function hideMenu(){
-        navLinks.style.right = "-200px";
-    }
-</script>
-   
 </body>
 </html>
